atualização de conhecimentos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -55,6 +55,18 @@
           </div>
         </div>
         <div class="skill-category">
+          <h3 class="skill-title">Banco de Dados</h3>
+          <div class="skill-tags">
+            <span class="tag" *ngFor="let skill of skills.database">{{ skill }}</span>
+          </div>
+        </div>
+        <div class="skill-category">
+          <h3 class="skill-title">DevOps & Cloud</h3>
+          <div class="skill-tags">
+            <span class="tag" *ngFor="let skill of skills.devops">{{ skill }}</span>
+          </div>
+        </div>
+        <div class="skill-category">
           <h3 class="skill-title">Gestão de Projetos</h3>
           <div class="skill-tags">
             <span class="tag" *ngFor="let skill of skills.management">{{ skill }}</span>
